--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,9 @@ img {
 .form-control::placeholder {
   color: #bbb !important;
 }
+
+.error{
+  color:red;
+  font-size: 14px;
+  font-weight: 600;
+}
