--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,23 @@ img {
   font-size: 14px;
   font-weight: 600;
 }
+.AccTypeMainContainer{
+  border: 1px solid #c1c1c1;
+    border-radius: 6px;
+    padding: 10px;
+
+}
+.AccTypeMainContainer h4{
+  font-size: 20px;
+}
+
+.AccTypeContainer label{
+  font-size: 20px;
+    color: #525050;
+    padding: 5px;
+}
+
+.AccTypeContainer input[type=radio] {
+  margin: 5px;
+
+}
