--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -49,3 +49,61 @@
     border: 1px solid #727272 ;
     border-radius: 10px;
 }
+
+.BookContainer{
+    width: 100%;
+    padding: 5px;
+}
+.BookContainer img{
+    width: 85%;
+    margin: 0 auto;
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 4px;
+    transition: all 0.2s ease-in-out;
+}
+
+.BookContainer h3{
+    font-size: 16px;
+    padding-top: 5px;
+    font-weight: 500;
+    color: #5e5e5e;
+}
+
+.BookContainer h5{
+    font-size: 14px;
+    
+}
+
+.BookContainer p{
+    font-weight: 600;
+    color: #ff8c15;
+}
+
+.BookContainer hr{
+    margin-top: 2px;
+    margin-bottom: 7px;
+}
+
+.BookContainer a{
+    text-decoration: none;
+}
+
+.BookContainer a:hover > img{
+    transform: scale(1.1);
+}
+
+.BookContainer a:hover > h3{
+    color:rgb(43, 42, 42)
+}
+
+.priceContainer{
+    display: flex;
+}
+
+.priceContainer button{
+    margin-left: 30%;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 6px;
+}
