--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ img {
 
 .navbar {
   background-color: #101c38;
+  transition: all 0.2s ease-in;
 }
 .fa.fa-edit {
   color: #566ce9;
@@ -123,3 +124,33 @@ img {
   background-color: white;
     border-color: #007bff82;
 }
+
+.searchBox{
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 20px;
+  padding-left: 15px;
+  width: 400px;
+  outline: none;
+  border: 1px solid gray;
+  background: #f1f1f1;
+  border-radius: 10px;
+  font-size: 14px;
+}
+
+.sticky{
+  position: fixed;
+  top:0;
+  width:100%;
+  z-index:1000;
+  box-shadow: 2px 2px 5px black;
+}
+
+.shopCart i{
+  padding-top: 14px;
+    font-size: 18px;
+    padding-right: 5px;
+    color: #f1f1f1;
+    cursor: pointer
+}
+
