--- a/src/App.css
+++ b/src/App.css
@@ -125,17 +125,19 @@ img {
     border-color: #007bff82;
 }
 
-.searchBox{
+.searchBox {
   padding-top: 6px;
   padding-bottom: 6px;
   padding-right: 20px;
   padding-left: 15px;
-  width: 400px;
+  width: 95%;
   outline: none;
   border: 1px solid gray;
   background: #f1f1f1;
   border-radius: 10px;
   font-size: 14px;
+  margin-left: 2%;
+  margin-bottom: 2%;
 }
 
 .sticky{
@@ -152,5 +154,17 @@ img {
     padding-right: 5px;
     color: #f1f1f1;
     cursor: pointer
+}
+
+
+.searchDivider{
+  
+    margin-top: 6px;
+    /* padding-left: 9px; */
+    margin-left: 17px;
+    margin-right: 15px;
+    border-top: 1px dashed #007bff82;
+    width: 100%;
+
 }
 
